# TribalMemory

./: .dockerignore  .gitignore  BREAKING-CHANGES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTEGRATION-SPEC.md  LEARNED-RETRIEVAL-LAYER.md  LICENSE  README.md  SUCCESS-CRITERIA.md  TEST-BATTERY.md  TESTING-RULES.md  demo.sh  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
benchmarks/: __init__.py  babilong.py  beir_adapter.py  ragas_adapter.py  token-reduction-benchmark.md
docs/: cloud-spec.md  demo-output.md  demo.cast  fastembed-quickstart.md  import-export-guide.md  landing-page-spec.md  landing-page.html  memorybench-results.md  ollama-quickstart.md  portable-memory.md
docs/assets/: claude-session.cast  codex-session.cast  one-brain-two-agents.cast
docs/specs/: entity-extraction-v2.md
eval/memory-test/: facts-codebase.json  facts-engineering.json  facts-v2.json  harness.py  runner.py
extensions/memory-tribal/: .gitignore  README.md  SETUP.md  index.ts  install.sh  openclaw.plugin.json  package-lock.json  package.json
src/tribalmemory/: __init__.py  cli.py  interfaces.py  service.py  utils.py
tests/: __init__.py  conftest.py  test_a21_config.py  test_a21_container.py  test_a21_providers.py  test_a21_system.py  test_auto_temporal.py  test_batch_endpoint.py  test_benchmarks.py  test_cli.py  test_dependency_relationships.py  test_embedding_portability.py  test_entity_validation.py  test_fastembed.py  test_graph_aware_recall.py  test_graph_memory_integration.py  test_graph_store.py  test_graph_store_pooling.py  test_hybrid_search.py  test_import_export.py  test_lancedb_session_store.py  test_lazy_spacy.py  test_lazy_spacy_benchmark.py  test_local_embeddings.py  test_mcp_integration.py  test_mcp_server.py  test_memory_harness.py  test_negative_security.py  test_performance.py  test_regex_extraction.py  test_reranking.py  test_server.py  test_service.py  test_services.py  test_session_edge_cases.py  test_session_integration.py  test_session_pagination.py  test_session_store.py  test_spacy_benchmark.py  test_spacy_extractor.py  (+6 more)
tests/tier2/: README.md  dataset.json  lib-test-common.sh  run-tests-tribal.sh  (+2 more)
video/: package-lock.json  package.json  tsconfig.json
(+86 files in other folders)
